==> shaiku/elua/src/platform/lpc43xx/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "chip.h"
#include "utils.h"
#include "common.h"
#include "platform_conf.h"
#define SYSTICKHZ             10

void platform_s_uart_send( unsigned id, u8 data )
{
  Chip_UART_SendBlocking(LPC_USART0, &data, 1);
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  u8 buffer;

  if( timeout == 0 )
  {
    if ( Chip_UART_Read(LPC_USART0, &buffer, 1) == 0 )
      return -1;
    else
      return ( int )buffer;
  }

  Chip_UART_ReadBlocking(LPC_USART0, &buffer, 1);
  return ( int )buffer;
}
