==> ziggurat29/NYETduinoPlusLua/Src/elua/src/platform/stm32f4/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "uip_arp.h"
#include "elua_uip.h"
#include "elua_adc.h"
#include "uip-conf.h"
#include "platform_conf.h"
#include "diskio.h"
#include "common.h"
#include "buf.h"
#include "utils.h"
#include "lua.h"
#include "lauxlib.h"
#include "lrotable.h"
#include "stm32f4xx_hal.h"
#include "cmsis_os.h"
#include "usbd_cdc_core.h"
#include "usbd_usr.h"
#include "usb_conf.h"
#include "usbd_desc.h"
#define HCLK        ( (HSI_VALUE / PLL_M) * PLL_N / PLL_P)
#define HCLK        ( (HSE_VALUE / PLL_M) * PLL_N / PLL_P)
#define PCLK1_DIV   2
#define PCLK2_DIV   1
#define PCLK1_DIV   4
#define PCLK2_DIV   2
#define SYSTICKHZ               20
#define SYSTICKMS               (1000 / SYSTICKHZ)
#define WATCH_COUNTER_RESET     127

void platform_s_uart_send( unsigned id, u8 data )
{
//HHH
/*
#ifdef BUILD_USB_CDC
  if( id == CDC_UART_ID )
    VCP_DataTx( &data, 1 );
  else
#endif  
  {
    while(USART_GetFlagStatus(stm32_usart[id], USART_FLAG_TXE) == RESET);
    USART_SendData(stm32_usart[id], data);
  }
*/

	//XXX no-brainer blocking mode for initial attempt
	HAL_StatusTypeDef hret = HAL_UART_Transmit ( &huart6, &data, 1, 1000 );
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
//HHH
/*
  if( id == CDC_UART_ID ) // this shouldn't happen
    return -1;
  if( timeout == 0 )
  {
    if (USART_GetFlagStatus(stm32_usart[id], USART_FLAG_RXNE) == RESET)
      return -1;
    else
      return USART_ReceiveData(stm32_usart[id]);
  }
  // Receive char blocking
  while(USART_GetFlagStatus(stm32_usart[id], USART_FLAG_RXNE) == RESET);
  return USART_ReceiveData(stm32_usart[id]);
*/

	//XXX no-brainer blocking mode for initial attempt
	uint32_t Timeout = PLATFORM_TIMER_INF_TIMEOUT == timeout ? 0xffff : timeout;

	uint8_t RxData;
	HAL_StatusTypeDef hret = HAL_UART_Receive ( &huart6, &RxData, 1, Timeout );
	if ( HAL_OK == hret )
		return RxData;
	return -1;
}
